# ComputerGraph

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: AdvancedTextureOptimizations.md
include/core/: App.h  AppConfig.h  GlfwContext.h  Timer.h  Window.h
include/input/: InputState.h
include/loader/: ObjLoader.h
include/math/: Camera.h
include/render/: ParticleSystem.h  SceneRenderer.h  Shader.h  SkyboxRenderer.h  TextRenderer.h
include/scene/: DemoSceneBuilder.h  FlagGenerator.h  GroundBuilder.h  Scene.h
include/util/: FileSystem.h  Log.h  MeshUtils.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: axes_fragment.glsl  axes_vertex.glsl  fragment.glsl  grid_fragment.glsl  particle.frag  particle.vert  skybox.frag  skybox.vert  standard.frag  standard.vert  vertex.glsl
src/: App.cpp  Camera.cpp  DemoSceneBuilder.cpp  FileSystem.cpp  FlagGenerator.cpp  GlfwContext.cpp  GroundBuilder.cpp  MeshUtils.cpp  ObjLoader.cpp  ParticleSystem.cpp  Scene.cpp  SceneRenderer.cpp  Shader.cpp  SkyboxRenderer.cpp  TextRenderer.cpp  Timer.cpp  Window.cpp  main.cpp
ue/MapFbxExporter/: MapFbxExporter.uplugin
ue/MapFbxExporter/Source/MapFbxExporter/: MapFbxExporter.Build.cs
ue/MapFbxExporter/Source/MapFbxExporter/Private/: MapFbxExportCommandlet.cpp  MapFbxExportSubsystem.cpp  MapFbxExporterModule.cpp
ue/MapFbxExporter/Source/MapFbxExporter/Public/: MapFbxExportCommandlet.h  MapFbxExportSubsystem.h  MapFbxExporterModule.h
